--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,13 @@ edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+# https://crates.io/crates/oracle
+
+
 [dependencies]
 log = "0.4.11"
 simplelog = "^0.7.6"
+threadpool = "*"
+mysql = "*"
+#diesel = { version = "1.4.4", features = ["mysql"] }
+dotenv = "0.15.0"
