--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,5 +36,7 @@ tera = "1"
 actix-files = "0.3"
 actix-session = "0.4"
 actix-utils = "2"
+serde = { version = "1", features = ["derive"] }
 
 [dev-dependencies]
+actix-rt = "1"
