--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ dotenv = "0.15.0"
 telegram-bot = "0.8.0"
 # -------------------Databases----------------------
 mysql = "*"
-# diesel = { version = "1.4.4", features = ["mysql"] }
+diesel = { version = "1.4.4", features = ["sqlite","r2d2","chrono"] }
 # -------------------actix--------------------------
 actix-web = "3"
 tera = "1"
