--- a/.travis.yml
+++ b/.travis.yml
@@ -38,34 +38,61 @@ matrix:
       - cargo check
       # - cargo check --target wasm32-unknown-unknown
       # Build the project & Run tests
-      - cargo test --doc
+      # - cargo test --doc
       - cargo test --all
       # - cargo test --all --target wasm32-unknown-unknown
-  - name: CodeCov build & run
-    addons:
-      apt:
-        packages:
-          - libcurl4-openssl-dev
-          - libelf-dev
-          - libdw-dev
-          - cmake
-          - gcc
-          - binutils-dev
-          - libiberty-dev
-    after_success: |
-      wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
-      tar xzf master.tar.gz &&
-      cd kcov-master &&
-      mkdir build &&
-      cd build &&
-      cmake .. &&
-      make &&
-      make install DESTDIR=../../kcov-build &&
-      cd ../.. &&
-      rm -rf kcov-master &&
-      for file in target/debug/examplerust-*; do [ -x "${file}" ] || continue; mkdir -p "target/cov/$(basename $file)"; ./kcov-build/usr/local/bin/kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file"; done &&
-      bash <(curl -s https://codecov.io/bash) &&
-      echo "Uploaded code coverage"
+  # In matrix, these jobs will run in parallel.
+  # - name: CodeCov build & run
+  #   addons:
+  #     apt:
+  #       packages:
+  #         - libcurl4-openssl-dev
+  #         - libelf-dev
+  #         - libdw-dev
+  #         - cmake
+  #         - gcc
+  #         - binutils-dev
+  #         - libiberty-dev
+  #   after_success: |
+  #     wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
+  #     tar xzf master.tar.gz &&
+  #     cd kcov-master &&
+  #     mkdir build &&
+  #     cd build &&
+  #     cmake .. &&
+  #     make &&
+  #     make install DESTDIR=../../kcov-build &&
+  #     cd ../.. &&
+  #     rm -rf kcov-master &&
+  #     for file in target/debug/examplerust-*; do [ -x "${file}" ] || continue; mkdir -p "target/cov/$(basename $file)"; ./kcov-build/usr/local/bin/kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file"; done &&
+  #     bash <(curl -s https://codecov.io/bash) &&
+  #     echo "Uploaded code coverage"
+
+# ONLY run on successfully tested
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+      - libelf-dev
+      - libdw-dev
+      - cmake
+      - gcc
+      - binutils-dev
+      - libiberty-dev
+after_success: |
+  wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
+  tar xzf master.tar.gz &&
+  cd kcov-master &&
+  mkdir build &&
+  cd build &&
+  cmake .. &&
+  make &&
+  make install DESTDIR=../../kcov-build &&
+  cd ../.. &&
+  rm -rf kcov-master &&
+  for file in target/debug/examplerust-*; do [ -x "${file}" ] || continue; mkdir -p "target/cov/$(basename $file)"; ./kcov-build/usr/local/bin/kcov --exclude-pattern=/.cargo,/usr/lib --verify "target/cov/$(basename $file)" "$file"; done &&
+  bash <(curl -s https://codecov.io/bash) &&
+  echo "Uploaded code coverage"
 
 notifications:
   email:
